# 221_3210_Mikhailov

./: README.md
MMCS_exam/: CMakeLists.txt  Promocode.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  promocodewidget.cpp  promocodewidget.h  promocodewidget.ui
